//
// Created by student on 18.11.2019.
//
#pragma once
class Observer{
public:
    virtual void notify(float) = 0;
};
