TODO: Create class diagram...
@startuml
class Observable {
    -std::set<Observer*> observers
    +void registerObserver(Observer*)
    +void unregisterObserver(Observer*)
    #void notifyObservers(float)
}
interface Observer{
+void notify(float)
}
class Displacement{
-float value
+void set(float)
}
class Acceleration{
-bool hasFirstValue
-bool hasSecondValue
-bool hasThirdValue
-float firstValue
-float secondValue
-float thirdValue
+float get()
}
class Speed{
-bool hasFirstValue
-bool hasSecondValue
-float firstValue
-float secondValue
+float get()
}
Observable "1" o-- "*" Observer
Observable <|-- Displacement
Observer <|-- Acceleration
Observer <|--Speed
Displacement <.. Acceleration : observes
Displacement <.. Speed : observes
note right of Observable : for(Observer* observer : observers)\nobserver->natify(value);
@enduml
